Add portfolio section and update pricing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section id="inicio" class="hero">
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
@@ -77,6 +77,30 @@
                     </div>
                     <h3>Mantenimiento y soporte</h3>
                 </div>
+                <div class="service-item">
+                    <div class="service-icon">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                    <h3>Diseño responsive</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2 class="section-title">Portfolio</h2>
+            <div class="portfolio-grid">
+                <div class="portfolio-item">
+                    <img src="attached_assets/image_1753552583773.png" alt="Proyecto de ejemplo 1">
+                </div>
+                <div class="portfolio-item">
+                    <img src="attached_assets/image_1753552583773.png" alt="Proyecto de ejemplo 2">
+                </div>
+                <div class="portfolio-item">
+                    <img src="attached_assets/image_1753552583773.png" alt="Proyecto de ejemplo 3">
+                </div>
             </div>
         </div>
     </section>
@@ -110,8 +134,8 @@
                     <h3>Básico</h3>
                     <div class="price">$5000</div>
                     <ul class="features">
-                        <li>Landing pagette</li>
-                        <li>Sinine sección lante</li>
+                        <li>Landing page de una sección</li>
+                        <li>Diseño responsive</li>
                     </ul>
                     <button class="btn-secondary">Lo quiero</button>
                 </div>
@@ -120,8 +144,8 @@
                     <h3>Profesional</h3>
                     <div class="price">$15000</div>
                     <ul class="features">
-                        <li>Usta el 4 seccions</li>
-                        <li>Sitio procentálido</li>
+                        <li>Hasta 4 secciones personalizadas</li>
+                        <li>Formularios de contacto y SEO básico</li>
                     </ul>
                     <button class="btn-primary">Quiero éste</button>
                 </div>
@@ -129,8 +153,8 @@
                     <h3>Avanzado</h3>
                     <div class="price">$25000</div>
                     <ul class="features">
-                        <li>Personaliza o sitio</li>
-                        <li>Una sitio potinzado</li>
+                        <li>Tienda online completa</li>
+                        <li>Integraciones a medida y soporte mensual</li>
                     </ul>
                     <button class="btn-secondary">Empecemos</button>
                 </div>
